--- a/package.json
+++ b/package.json
@@ -4,19 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack/dev.config.js --open"
-  },
-  "babel": {
-    "presets": [
-      "env",
-      "react",
-      "stage-2"
-    ]
+    "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.babel.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack/dev.config.babel.js --open"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -31,6 +25,10 @@
     "clean-webpack-plugin": "^0.1.17",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
+    "eslint": "^4.14.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
@@ -39,6 +37,7 @@
     "uglifyjs-webpack-plugin": "^1.1.5",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
+    "webpack-md5-hash": "0.0.6",
     "webpack-merge": "^4.1.1"
   }
 }
